--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -7,9 +7,9 @@
 /* You can override the default Infima variables here. */
 :root {
   --ifm-color-primary: #417aff;
-  --ifm-color-primary-dark: #bcfffd;
-  --ifm-color-primary-darker: #bcfffd;
-  --ifm-color-primary-darkest: #bcfffd;
+  --ifm-color-primary-dark: #417aff;
+  --ifm-color-primary-darker: #417aff;
+  --ifm-color-primary-darkest: #417aff;
   --ifm-color-primary-light: #ffd3f7;
   --ifm-color-primary-lighter: #ffd3f7;
   --ifm-color-primary-lightest: #ffd3f7;
@@ -19,10 +19,10 @@
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme="dark"] {
-  --ifm-color-primary: #bcfffd;
-  --ifm-color-primary-dark: #bcfffd;
-  --ifm-color-primary-darker: #bcfffd;
-  --ifm-color-primary-darkest: #bcfffd;
+  --ifm-color-primary: #417aff;
+  --ifm-color-primary-dark: #417aff;
+  --ifm-color-primary-darker: #417aff;
+  --ifm-color-primary-darkest: #417aff;
   --ifm-color-primary-light: #ffd3f7;
   --ifm-color-primary-lighter: #ffd3f7;
   --ifm-color-primary-lightest: #ffd3f7;
@@ -37,4 +37,9 @@
 .featureImg {
   height: 200px;
   width: auto;
+}
+
+.button {
+  margin-left: 2em;
+  margin-right: 2em;
 }
